Refactor timetable retrieval logic to use collect method for better readability